--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,6 +20,24 @@
                 <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span></h1>
                 <h3 class="welcome-sub-text">Your performance summary this week </h3>
             </li>
+            <!-- TODO: implement flash or messages -->
+            <!-- <li>
+                <% if (messages.error) { %>
+                    <p class="error">
+                        <%= messages.error %>
+                    </p>
+                    <% } %>
+                        <% if (messages.info) { %>
+                            <p class="info">
+                                <%= messages.info %>
+                            </p>
+                            <% } %>
+                                <% if (messages.success) { %>
+                                    <p class="success">
+                                        <%= messages.success %>
+                                    </p>
+                                    <% } %>
+            </li> -->
         </ul>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown d-none d-lg-block">
