--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -129,7 +129,7 @@
                                                             <div class="row">
                                                                 <div class="mt-3">
 
-                                                                    <a href="/<%- url%>" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                                                    <a href="<%- url%>" class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
 
                                                                     <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end" type="submit">Save</button>
                                                                 </div>
