--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -29,7 +29,7 @@
 <body class="sidebar-icon-only">
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
-        <%- include('./partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user, user}); %>
             <!-- partial -->
 
             <div class="container-fluid page-body-wrapper">
@@ -45,19 +45,29 @@
                                             <div class="card card-rounded">
                                                 <div class="card-body">
                                                     <h4>Create User</h4>
-                                                    <form id="form-register" class="pt-3" action="/create-user" method="post">
+                                                    <form id="form-create-user" class="pt-3" action="/create-user" method="post">
                                                         <div class="row">
                                                             <div class="col-lg-6">
                                                                 <div class="form-group">
+                                                                    <label class="required" for="role">Role</label>
+                                                                    <select name="role" id="role" class="form-control form-control-lg">
+                                                                        <option value="">Select Role</option>
+                                                                        <% for(const [key, value] of selectRoles) { %>       
+                                                                            <option value="<%= value %>"><%= key %></option>
+                                                                        <% }%>
+                                                                    </select>
+                                                                </div>
+
+                                                                <div class="form-group">
                                                                     <label class="required" for="email">Email</label>
-                                                                    <input type="email" id="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required />
+                                                                    <input autocomplete="off" type="email" id="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" required />
 
                                                                 </div>
 
                                                                 <div class="form-group">
                                                                     <label for="password" class="required">Password</label>
 
-                                                                    <input type="password" id="password" name="password" class="form-control mb-3 form-control-lg" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                                                                    <input autocomplete="off" type="password" id="password" name="password" class="form-control mb-3 form-control-lg" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                                                         placeholder="Password" required/>
                                                                     <div id="message">
                                                                         <p>Password must contain the following:</p>
@@ -70,46 +80,46 @@
                                                                 <div class="form-group">
                                                                     <label for="firstName" class="required">First Name</label>
 
-                                                                    <input type="text" id="firstName" name="personalInfo.firstName" class="form-control mb-3 form-control-lg" placeholder="First Name" required autofocus />
+                                                                    <input type="text" id="firstName" name="firstName" class="form-control mb-3 form-control-lg" placeholder="First Name" required autofocus />
                                                                 </div>
 
                                                                 <div class="form-group">
                                                                     <label for="lastName" class="required">Last Name</label>
 
-                                                                    <input type="text" id="lastName" name="personalInfo.lastName" class="form-control mb-3 form-control-lg" placeholder="LastName" required autofocus />
+                                                                    <input type="text" id="lastName" name="lastName" class="form-control mb-3 form-control-lg" placeholder="LastName" required autofocus />
                                                                 </div>
 
                                                                 <div class="form-group">
                                                                     <label for="phoneNumber" class="required">Phone Number</label>
 
-                                                                    <input type="tel" id="phoneNumber" name="personalInfo.phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
+                                                                    <input type="tel" id="phoneNumber" name="phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
                                                                 </div>
                                                             </div>
                                                             <div class="col-lg-6">
                                                                 <div class="form-group">
                                                                     <label for="dateOfBirth" class="required">Date Of Birth</label>
 
-                                                                    <input type="date" id="dateOfBirth" name="personalInfo.dateOfBirth" class="form-control mb-3 form-control-lg" required autofocus />
+                                                                    <input type="date" id="dateOfBirth" name="dateOfBirth" class="form-control mb-3 form-control-lg" required autofocus />
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="city" class="required">City</label>
 
-                                                                    <input type="text" id="city" name="personalInfo.city" class="form-control form-control-lg" placeholder="City" required autofocus />
+                                                                    <input type="text" id="city" name="city" class="form-control form-control-lg" placeholder="City" required autofocus />
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="carBrand" class="sr-only">Car Brand</label>
 
-                                                                    <input type="text" id="carBrand" name="carInfo.brand" class="form-control mb-3 form-control-lg" placeholder="Car Brand" autofocus />
+                                                                    <input type="text" id="carBrand" name="brand" class="form-control mb-3 form-control-lg" placeholder="Car Brand" autofocus />
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="carModel" class="sr-only">Car Model</label>
 
-                                                                    <input type="text" id="carModel" name="carInfo.model" class="form-control mb-3 form-control-lg" placeholder="Car Model" autofocus />
+                                                                    <input type="text" id="carModel" name="model" class="form-control mb-3 form-control-lg" placeholder="Car Model" autofocus />
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="carPlate" class="sr-only">Car Plate</label>
 
-                                                                    <input type="text" id="carPlate" name="carInfo.plate" class="form-control mb-3 form-control-lg" placeholder="Car Plate" autofocus />
+                                                                    <input type="text" id="carPlate" name="plate" class="form-control mb-3 form-control-lg" placeholder="Car Plate" autofocus />
                                                                 </div>
                                                             </div>
                                                         </div>
