--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -48,7 +48,7 @@
                                                     <div class="card-body">
                                                         <div class="table-responsive mt-1">
                                                             <div class="d-sm-flex justify-content-between align-items-start float-end">
-                                                                <a href="/edit-user/<%- customer.id%>?url=view-user" data-id="user" type="button" class="btn btn-primary btn-icon-text">
+                                                                <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user" type="button" class="btn btn-primary btn-icon-text">
                                                                     <i class=" mdi mdi-square-edit-outline"></i> Edit
                                                                 </a>
                                                             </div>
