Move views to /auth and /dashboards
Move roles to another path.

Fix addUser method.

--- a/views/dashboards/customer.ejs
+++ b/views/dashboards/customer.ejs
@@ -27,14 +27,14 @@
 <body>
     <div class="container-scroller">
         <!-- partial:partials/_navbar.html -->
-        <%- include('./partials/navbar.ejs' , {user, user}); %>
+        <%- include('../partials/navbar.ejs' , {user, user}); %>
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_settings-panel.html -->
-                <%- include('./partials/settings-panel.ejs'); %>
+                <%- include('../partials/settings-panel.ejs'); %>
                     <!-- partial -->
                     <!-- partial:partials/_sidebar.html -->
-                    <%- include('./partials/sidebar.ejs'); %>
+                    <%- include('../partials/sidebar.ejs'); %>
                         <!-- partial -->
                         <div class="main-panel">
                             <div class="content-wrapper">
@@ -44,99 +44,19 @@
                                             <div class="d-sm-flex align-items-center justify-content-between border-bottom">
                                                 <ul class="nav nav-tabs" role="tablist">
                                                     <li class="nav-item">
-                                                        <a class="nav-link active ps-0" id="home-tab" data-bs-toggle="tab" href="#members" role="tab" aria-controls="members" aria-selected="true">Members</a>
+                                                        <a class="nav-link active ps-0" id="profile-tab" data-bs-toggle="tab" href="#plan" role="tab" aria-selected="true">My Plan</a>
                                                     </li>
                                                     <li class="nav-item">
-                                                        <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#plan" role="tab" aria-selected="false">My Plan</a>
-                                                    </li>
-                                                    <li class="nav-item">
-                                                        <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#demographics" role="tab" aria-selected="false">Demographics</a>
+                                                        <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#activity" role="tab" aria-selected="false">Activity</a>
                                                     </li>
                                                     <li class="nav-item">
                                                         <a class="nav-link border-0" id="more-tab" data-bs-toggle="tab" href="#more" role="tab" aria-selected="false">More</a>
                                                     </li>
                                                 </ul>
-                                                <div>
-                                                    <div class="btn-wrapper">
-                                                        <a href="#" class="btn btn-otline-dark align-items-center"><i class="icon-share"></i> Share</a>
-                                                        <a href="#" class="btn btn-otline-dark"><i class="icon-printer"></i> Print</a>
-                                                        <a href="#" class="btn btn-primary text-white me-0"><i class="icon-download"></i> Export</a>
-                                                    </div>
-                                                </div>
+
                                             </div>
                                             <div class="tab-content tab-content-basic">
-                                                <div class="tab-pane fade show active" id="members" role="tabpanel" aria-labelledby="members">
-                                                    <div class="row">
-                                                        <div class="col-lg-12 d-flex flex-column">
-                                                            <div class="row flex-grow">
-                                                                <div class="col-12 grid-margin stretch-card">
-                                                                    <div class="card card-rounded">
-                                                                        <div class="card-body">
-                                                                            <div class="d-sm-flex justify-content-between align-items-start">
-                                                                                <div>
-                                                                                    <h4 class="card-title card-title-dash">Members</h4>
-                                                                                </div>
-                                                                                <div>
-                                                                                    <a href="/create-user" class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-account-plus"></i>Add new member</a>
-                                                                                </div>
-                                                                            </div>
-                                                                            <div class="table-responsive  mt-1">
-                                                                                <table class="table table-hover">
-                                                                                    <thead>
-                                                                                        <tr>
-                                                                                            <th>Name</th>
-                                                                                            <th>Phone</th>
-                                                                                            <th>Email</th>
-                                                                                            <th>Plan</th>
-                                                                                            <th>Expiration Date <br> (MM/DD/YYYY)
-                                                                                            </th>
-                                                                                            <th>Action</th>
-                                                                                        </tr>
-                                                                                    </thead>
-                                                                                    <tbody>
-                                                                                        <% for(const user of users) { %>
-                                                                                            <tr>
-                                                                                                <td>
-                                                                                                    <a class="btn-link" href="/view-user/<%- user.id%>">
-                                                                                                        <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
-                                                                                                            <% if(!user.hasAllInformation) {%>
-                                                                                                                <i class="mdi mdi-alert text-warning" style="padding-left: 10px;"></i>
-                                                                                                                <%}%>
-                                                                                                    </a>
-                                                                                                </td>
-                                                                                                <td>
-                                                                                                    <%- user.personalInfo.phoneNumber %>
-                                                                                                </td>
-                                                                                                <td>
-                                                                                                    <%- user.email%>
-                                                                                                </td>
-                                                                                                <td>
-                                                                                                    <%- user.membershipInfo.plan%>
-                                                                                                </td>
-                                                                                                <td>
-                                                                                                    <%= moment(user.membershipInfo.endDate).isValid() ? moment(user.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
-                                                                                                </td>
-                                                                                                <td>
-                                                                                                    <a href="/edit-user/<%- user.id%>?url=/account" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="mdi mdi-square-edit-outline icon-md"></i>
-                                                                                                    </a>
-                                                                                                    <a id="deleteBtn" href="/delete-user/<%- user.id%>" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="mdi mdi-delete icon-md text-danger"></i>
-                                                                                                    </a>
-                                                                                                </td>
-                                                                                            </tr>
-                                                                                            <%}%>
-                                                                                    </tbody>
-                                                                                </table>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="tab-pane" id="plan" role="tabpanel" aria-labelledby="plan">
+                                                <div class="tab-pane show active" id="plan" role="tabpanel" aria-labelledby="plan">
                                                     <div class="row">
                                                         <div class="col-lg-12 d-flex flex-column">
                                                             <div class="row flex-grow">
@@ -199,7 +119,7 @@
                             </div>
                             <!-- content-wrapper ends -->
                             <!-- partial:partials/_footer.html -->
-                            <%- include('./partials/footer.ejs'); %>
+                            <%- include('../partials/footer.ejs'); %>
                                 <!-- partial -->
                         </div>
                         <!-- main-panel ends -->
@@ -228,7 +148,7 @@
     <!-- Custom js for this page-->
     <script>
         var user = <%- JSON.stringify(user) %>;
-        console.log(user);
+        console.debug(user);
     </script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="./js/account.js"></script>
@@ -238,7 +158,7 @@
     <!-- End custom js for this page-->
 
     <!-- Alerts Code -->
-    <%- include('./partials/alerts.ejs', {message, alertType}); %>
+    <%- include('../partials/alerts.ejs', {message, alertType}); %>
 </body>
 
 </html>
