--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -176,6 +176,9 @@
                                 <%- user.personalInfo.lastName%>
                         </p>
                         <p class="fw-light text-muted mb-0">
+                            <%- user.role%>
+                        </p>
+                        <p class="fw-light text-muted mb-0">
                             <%- user.email%>
                         </p>
                     </div>
