--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -76,7 +76,7 @@
                     <div class="col-lg-4 mx-auto">
                         <div class="auth-form-light text-center py-5 px-4 px-sm-5">
                             <div class="brand-logo">
-                                <img src="/images/mrquicks-logo.png" alt="logo">
+                                <img src="/images/mrquicks/mrQuicksLogo.png" alt="logo">
                             </div>
                             <h4>Login</h4>
                             <h6 class="fw-light">Mr. Quick's Subscriptions Portal.</h6>
