--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -31,10 +31,10 @@
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_settings-panel.html -->
-                <%- include('../partials/settings-panel.ejs'); %>
+                <%- include('../partials/settings-panel.ejs' , {user, user}); %>
                     <!-- partial -->
                     <!-- partial:partials/_sidebar.html -->
-                    <%- include('../partials/sidebar.ejs'); %>
+                    <%- include('../partials/sidebar.ejs' , {user, user}); %>
                         <!-- partial -->
                         <div class="main-panel">
                             <div class="content-wrapper">
