--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -34,7 +34,7 @@
 
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_sidebar.html -->
-                <%- include('../partials/sidebar.ejs'); %>
+                <%- include('../partials/sidebar.ejs' , {user, user}); %>
                     <!-- partial -->
                     <div class="main-panel">
                         <div class="content-wrapper">
