--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -33,7 +33,7 @@
             <!-- partial -->
             <div class="container-fluid page-body-wrapper">
                 <!-- partial:partials/_sidebar.html -->
-                <%- include('../partials/sidebar.ejs'); %>
+                <%- include('../partials/sidebar.ejs' , {user, user}); %>
 
                     <!-- <nav class="sidebar sidebar-offcanvas" id="sidebar">
                 <ul class="nav">
