--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="../js/sweet-alerts.js"></script>
 <script>
     $(document).ready(function() {
-        var msj = '<%- message %>';
+        var msj = `<%- message %>`;
         var alertType = '<%- alertType %>';
         var allAlertTypes = '<%- JSON.stringify(alertTypes) %>';
 
