--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -8,6 +8,12 @@
         </li>
 
         <%if([roles.ADMIN, roles.MANAGER].includes(user.role)) {%>
+            <li class="nav-item">
+                <a class="nav-link" href="/locations">
+                    <i class="mdi mdi-map-marker-multiple menu-icon"></i>
+                    <span class="menu-title">Locations</span>
+                </a>
+            </li>
             <li class="nav-item nav-category">UI Elements</li>
             <li class="nav-item">
                 <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
