--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -227,8 +227,8 @@
     <!-- endinject -->
     <!-- Custom js for this page-->
     <script>
-        var user = <%- JSON.stringify(user) %>;
-        console.debug(user);
+        var customer = <%- JSON.stringify(user) %>;
+        console.debug(customer);
     </script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="./js/account.js"></script>
