--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -200,7 +200,7 @@
                             <a href="/view-user/<%- user.id%>?viewType=myProfile" class="dropdown-item"><i class="dropdown-item-icon mdi mdi-account-outline text-primary me-2"></i> My Profile 
                                 <!-- <span class="badge badge-pill badge-danger">1</span> -->
                             </a>
-                            <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Messages</a>
+                            <!-- <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-message-text-outline text-primary me-2"></i> Messages</a> -->
                             <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-calendar-check-outline text-primary me-2"></i> Activity</a>
                             <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
                             <form action="/logout?_method=DELETE" method="POST">
