--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -51,7 +51,7 @@
             </li> -->
         </ul>
         <ul class="navbar-nav ms-auto">
-            <%if([roles.ADMIN, roles.MANAGER].includes(user.role)) {%>
+            <%if([roles.ADMIN].includes(user.role)) {%>
 
                 <li class="nav-item dropdown d-none d-lg-block">
                     <a class="nav-link dropdown-bordered dropdown-toggle dropdown-toggle-split" id="messageDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> Select Category </a>
