--- a/views/location/create.ejs
+++ b/views/location/create.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Create User </title>
+    <title>Create Location </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -47,7 +47,7 @@
                                             <div class="card card-rounded">
                                                 <div class="card-body">
                                                     <h4>Create Location</h4>
-                                                    <form id="form-create-user" class="pt-3" action="/create-location" method="post">
+                                                    <form id="form-create-location" class="pt-3" action="/create-location" method="post">
                                                         <div class="row">
                                                             <div class="col-lg-6">
 
