--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -79,24 +79,37 @@
                                                                             </p>
                                                                         </div>
                                                                     </div>
+                                                                    <%if(user.role === roles.ADMIN){%>
+                                                                        <div class="form-group">
+                                                                            <label class="required" for="role">Role</label>
+                                                                            <select name="role" id="role" class="form-control form-control-lg">
+                                                                            <option value="">Select Role</option>
+                                                                            <% for(const [key, value] of selectRoles) { %>    
+                                                                                <% var selected = (value == customer.role) ? "selected" : "";   %>
+   
+                                                                                <option value="<%= value %>" <%=selected%>><%= key %></option>
+                                                                            <% }%>
+                                                                        </select>
+                                                                        </div>
+                                                                        <%}%>
 
-                                                                    <div class="form-group">
-                                                                        <label for="firstName" class="required">First Name</label>
+                                                                            <div class="form-group">
+                                                                                <label for="firstName" class="required">First Name</label>
 
-                                                                        <input value="<%- customer.personalInfo.firstName%>" type="text" id="firstName" name="personalInfo.firstName" class="form-control mb-3 form-control-lg" placeholder="First Name" required autofocus />
-                                                                    </div>
+                                                                                <input value="<%- customer.personalInfo.firstName%>" type="text" id="firstName" name="personalInfo.firstName" class="form-control mb-3 form-control-lg" placeholder="First Name" required autofocus />
+                                                                            </div>
 
-                                                                    <div class="form-group">
-                                                                        <label for="lastName" class="required">Last Name</label>
+                                                                            <div class="form-group">
+                                                                                <label for="lastName" class="required">Last Name</label>
 
-                                                                        <input value="<%- customer.personalInfo.lastName%>" type="text" id="lastName" name="personalInfo.lastName" class="form-control mb-3 form-control-lg" placeholder="LastName" required autofocus />
-                                                                    </div>
+                                                                                <input value="<%- customer.personalInfo.lastName%>" type="text" id="lastName" name="personalInfo.lastName" class="form-control mb-3 form-control-lg" placeholder="LastName" required autofocus />
+                                                                            </div>
 
-                                                                    <div class="form-group">
-                                                                        <label for="phoneNumber" class="required">Phone Number</label>
+                                                                            <div class="form-group">
+                                                                                <label for="phoneNumber" class="required">Phone Number</label>
 
-                                                                        <input value="<%- customer.personalInfo.phoneNumber%>" type="tel" id="phoneNumber" name="personalInfo.phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
-                                                                    </div>
+                                                                                <input value="<%- customer.personalInfo.phoneNumber%>" type="tel" id="phoneNumber" name="personalInfo.phoneNumber" class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX" required autofocus />
+                                                                            </div>
                                                                 </div>
                                                                 <div class="col-lg-6">
                                                                     <div class="form-group">
