--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>View User </title>
+    <title>Users </title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -38,142 +38,78 @@
                     <!-- partial -->
                     <div class="main-panel">
                         <div class="content-wrapper">
-                            <h4>
-                                <%if(isMyProfile){%>
-                                    My Profile
-                                    <%}else{%>
-                                        View User
-                                        <%}%>
-                            </h4>
-                            <% if(customer) {%>
-                                <div class="row text-left">
-                                    <div class="col-lg-12 d-flex flex-column">
-                                        <div class="row flex-grow">
-                                            <div class="col-8 grid-margin stretch-card">
-                                                <div class="card card-rounded">
-                                                    <div class="card-body">
-                                                        <div class="table-responsive mt-1">
-                                                            <div class="d-sm-flex justify-content-between align-items-start float-end">
-                                                                <a href="/edit-user/<%- customer.id%>?url=/view-user" data-id="user" type="button" class="btn btn-primary btn-icon-text">
-                                                                    <i class=" mdi mdi-square-edit-outline"></i> Edit
-                                                                </a>
-                                                            </div>
-                                                            <table class="table table-hover">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Personal Information</th>
-                                                                        <th></th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td>Email</td>
-                                                                        <td>
-                                                                            <%- customer.email%>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Password</td>
-                                                                        <td id="password">
-                                                                            <!-- <%- customer.password%> -->
-                                                                            *********
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Role</td>
-                                                                        <td>
-                                                                            <%- customer.role%>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Name</td>
-                                                                        <td>
-                                                                            <%- customer.personalInfo.firstName + ' ' + customer.personalInfo.lastName %>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Phone Number</td>
-                                                                        <td>
-                                                                            <%- customer.personalInfo.phoneNumber %>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Birth Date</td>
-                                                                        <td>
-                                                                            <%= moment(customer.personalInfo.dateOfBirth).isValid() ? moment(customer.personalInfo.dateOfBirth).utc().format(shortDateFormat) : 'N/A' %>
-
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                            <table class="table table-hover">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Car Information</th>
-                                                                        <th></th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td>Brand</td>
-                                                                        <td>
-                                                                            <%- customer.carInfo.brand%>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Model</td>
-                                                                        <td>
-                                                                            <%- customer.carInfo.model%>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>Plate</td>
-                                                                        <td>
-                                                                            <%- customer.carInfo.plate%>
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-
-                                                            </table>
-
+                            <div class="row">
+                                <div class="col-lg-12 d-flex flex-column">
+                                    <div class="row flex-grow">
+                                        <div class="col-12 grid-margin stretch-card">
+                                            <div class="card card-rounded">
+                                                <div class="card-body">
+                                                    <div class="d-sm-flex justify-content-between align-items-start">
+                                                        <div>
+                                                            <h4 class="card-title card-title-dash">Users</h4>
+                                                        </div>
+                                                        <div>
+                                                            <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add User</a>
                                                         </div>
                                                     </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-4 grid-margin stretch-card">
-                                                <div class="card card-rounded">
-                                                    <div class="card-body">
-                                                        <div class="table-responsive  mt-1">
-                                                            <table class="table table-hover">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Membership Information</th>
-                                                                        <th></th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td>Plan</td>
-                                                                        <td>
-                                                                            <%- customer.membershipInfo.plan%>
-                                                                        </td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td>End Date</td>
-                                                                        <td>
-                                                                            <%= moment(customer.membershipInfo.endDate).isValid() ? moment(customer.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
-                                                                        </td>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
+                                                    <div class="table-responsive  mt-1">
+                                                        <table class="table table-hover">
+                                                            <thead>
+                                                                <tr>
+                                                                    <th>Name</th>
+                                                                    <th>Role</th>
+                                                                    <th>Email</th>
+                                                                    <th>Phone</th>
+                                                                    <th>Plan</th>
+                                                                    <th>Action</th>
+                                                                </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                                <%if(users){%>
+                                                                    <% for(const user of users) { %>
+                                                                        <tr>
+                                                                            <td>
+                                                                                <a class="btn-link" href="/view-user/<%- user.id%>">
+                                                                                    <%- user.personalInfo.firstName + ' ' + user.personalInfo.lastName %>
+                                                                                        <% if(!user.hasAllInformation) {%>
+                                                                                            <i class="mdi mdi-alert text-warning" style="padding-left: 10px;"></i>
+                                                                                            <%}%>
+                                                                                </a>
+                                                                            </td>
+                                                                            <td>
+                                                                                <%- user.role%>
+                                                                            </td>
+                                                                            <td>
+                                                                                <%- user.email%>
+                                                                            </td>
+                                                                            <td>
+                                                                                <%- user.personalInfo.phoneNumber %>
+                                                                            </td>
+
+                                                                            <td>
+                                                                                <%- user.membershipInfo.plan%>
+                                                                            </td>
+
+                                                                            <td>
+                                                                                <a href="/edit-user/<%- user.id%>?url=/users" type="button" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                                    <i class="mdi mdi-square-edit-outline icon-md"></i>
+                                                                                </a>
+                                                                                <a id="deleteBtn" href="/delete-user/<%- user.id%>" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                                    <i class="mdi mdi-delete icon-md text-danger"></i>
+                                                                                </a>
+                                                                            </td>
+                                                                        </tr>
+                                                                        <%}%>
+                                                                            <%}%>
+                                                            </tbody>
+                                                        </table>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <% }%>
+                            </div>
                         </div>
                     </div>
             </div>
@@ -200,16 +136,11 @@
     <script src="../js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <script>
-        var customer = <%- JSON.stringify(customer) %>;
-        console.log(customer);
-    </script>
+
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
 
     <!-- End custom js for this page-->
 
